--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -9,18 +9,13 @@ jobs:
   build:
     # The name below is the base of a required context for deployement. The generated value (i.e. `Build (ubuntu-18.04, 1.8)`) should match what's in `.github/deploy.yml` on `master`
     name: Build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['windows-2016', 'ubuntu-18.04', 'macOS-10.14']
-        java: [ '1.7', '1.8', '1.9']
+    runs-on: ubuntu-18.04
 
     steps:
-    - name: Set up JDK ${{ matrix.java }}
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: ${{ matrix.java }}
+        java-version: 1.8
     - name: Checkout
       uses: actions/checkout@v1
 
@@ -29,15 +24,15 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-mvn-java-${{ matrix.java }}
+        key: ubuntu-18.04-mvn-java-1.8
         restore-keys: |
-          mvn-${{ runner.os }}
+          mvn-ubuntu-18.04
     - name: Test and Package
       run: mvn package war:war
     - name: Save artifacts
       uses: actions/upload-artifact@v1
       with:
-        name: '${{matrix.os}}-${{matrix.java}}-${{github.sha}}.WAR'
+        name: 'ubuntu-18.04-1.8-${{github.sha}}.WAR'
         path: .
     - name: Build the Docker image
       if: matrix.os == 'ubuntu-18.04' && matrix.java == '1.8'
